--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -1,21 +1,22 @@
 .section {
+  display: flex;
   padding-top: 80px;
   padding-bottom: 80px;
-}
-.event-cards {
-  display: flex;
-  gap: 20px;
 }
 
 .event-block {
   display: flex;
-  flex-direction: column;
-  align-items: end;
+  flex-wrap: wrap;
+  column-gap: 19px;
+  row-gap: 22px;
+  width: 985px;
+  height: 874px;
+  margin-left: auto;
 }
 
 .event-cards_date-card {
   background: url('../../assets/backgrounds/event-text-card.webp');
-  background-size: contain;
+  background-size: cover;
   padding: 20px 65px 20px 20px;
   width: 647px;
   height: 395px;
@@ -39,6 +40,13 @@
   justify-content: space-between;
 }
 
+.event-cards_date-card_wrapper {
+  display: flex;
+  justify-content: end;
+  gap: 7px;
+  width: 140px;
+}
+
 .event-cards_date-card_date,
 .event-cards_date-card_place {
   color: var(--system-default-40);
@@ -58,12 +66,22 @@
   text-align: left;
 }
 
+.event-cards_info-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--primary-white);
+  padding: 20px 20px;
+  width: 319px;
+  height: 395px;
+}
+
 .event-cards_info-card_header {
   color: var(--primary-red);
   font-family: Nohemi;
   font-size: 32px;
   font-weight: 600;
-  line-height: 100.52%;
+  line-height: 32.17px;
   text-transform: uppercase;
 }
 
@@ -76,21 +94,17 @@
   text-align: left;
 }
 
-.event-cards_info-card {
+.event-register-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  background-color: var(--primary-white);
-  padding: 20px 20px;
-  max-width: 319px;
-  height: 395px;
+  width: 985px;
 }
 
-.event-register-form-container {
-  margin-top: 20px;
-  padding: 20px 20px;
-  max-width: 985px;
-  height: 383px;
+.event-register-form_container {
+  display: flex;
+  flex-direction: column;
+
+  padding: 20px 20px 154px 20px;
   border: 2px solid var(--primary-white);
 }
 
@@ -105,7 +119,7 @@
 
 .event-register-form_text {
   margin-top: 15px;
-  margin-bottom: 30px;
+  padding-bottom: 28px;
   color: var(--primary-orange);
   font-family: Nohemi;
   font-size: 16px;
@@ -114,14 +128,9 @@
   text-align: left;
 }
 
-.event-register-form {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
 .event-register-form_input {
+  height: 24px;
+  padding-left: 20px;
   background-color: inherit;
   outline: none;
   border: none;
@@ -130,6 +139,14 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 24px;
+}
+
+.event-register-form_name {
+  margin-top: 30px;
+}
+
+.event-register-form_email {
+  margin-top: 20px;
 }
 
 .event-register-form_input-label {
@@ -141,9 +158,9 @@
   content: '';
   position: absolute;
   bottom: 0;
-  left: -200px;
+  left: -350px;
   display: block;
-  min-width: 200px;
+  min-width: 350px;
   min-height: 1px;
   border-bottom: 2px solid var(--primary-white);
   transition: 300ms;
@@ -170,8 +187,9 @@
 
 .event-register-form_button {
   width: 100%;
-  padding: 20px 30px;
-  margin-top: 15px;
+  height: 62px;
+  margin-top: 12px;
+  padding: 0;
   color: var(--typography-black);
   font-family: Nohemi;
   font-size: 24px;
@@ -190,4 +208,41 @@
 .event-register-form_button:hover {
   background-color: var(--primary-orange);
   color: var(--typography-white);
+}
+
+@media screen and (max-width: 1439px) {
+  .section {
+    flex-direction: column;
+  }
+
+  .event-block {
+    gap: 30px;
+    width: 100%;
+    height: auto;
+    margin: 20px 0 0 0;
+  }
+
+  .event-cards_date-card,
+  .event-cards_info-card {
+    width: 100%;
+  }
+
+  .event-cards_date-card {
+    height: 407px;
+  }
+
+  .event-cards_info-card {
+    height: 445px;
+  }
+
+  .event-cards_date-card_date,
+  .event-cards_date-card_place,
+  .event-cards_date-card_date-text,
+  .event-cards_date-card_place-text {
+    font-size: 18px;
+  }
+
+  .event-cards_info-card_text {
+    font-size: 18px;
+  }
 }
