--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,10 @@
 .footer {
-  width: 100%;
-  height: 472px;
-  padding: 30px 0;
-}
-
-.footer .container {
   display: flex;
   height: 100%;
+  width: 100%;
+  height: 472px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .footer-title__wrapper {
@@ -37,7 +35,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: auto;
   border-top: 2px solid var(--typography-grey);
 }
 
@@ -100,9 +98,70 @@
   letter-spacing: 0%;
   text-align: left;
   text-transform: uppercase;
-  transition: 300ms;
 }
 
-.footer-content__links-date:hover {
-  color: var(--primary-orange);
+@media screen and (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .footer-title__wrapper {
+    width: 100%;
+    border-right: 0;
+  }
+
+  .footer-title {
+    height: 371px;
+
+    font-size: 126.48px;
+    line-height: 127.13px;
+  }
+
+  .footer-title__span {
+    font-size: 47.43px;
+    line-height: 47.68px;
+  }
+
+  .footer-content {
+    border: none;
+  }
+
+  .footer-content__title-wrapper {
+    height: 260px;
+    padding-bottom: 28px;
+  }
+
+  .footer-content__title {
+    width: 218px;
+    margin: auto 0 0 0;
+
+    font-size: 40px;
+    line-height: 40.21px;
+    text-align: left;
+  }
+
+  .footer-content__links {
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+    height: auto;
+    padding: 20px 0 16px 0;
+  }
+
+  .footer-content__links-list {
+    margin: 0;
+  }
+
+  .footer-content__links-icon {
+    width: 34px;
+    height: 34px;
+  }
+
+  .footer-content__links-date {
+    margin: 0;
+
+    font-size: 24px;
+    line-height: 24.12px;
+  }
 }
