--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   column-gap: 19px;
   row-gap: 22px;
-  width: 985px;
+  max-width: 985px;
   height: 874px;
   margin-left: auto;
 }
@@ -97,7 +97,7 @@
 .event-register-form {
   display: flex;
   flex-direction: column;
-  width: 985px;
+  width: 100%;
 }
 
 .event-register-form_container {
@@ -199,6 +199,23 @@
   border: none;
 
   transition: 300ms;
+}
+
+@media screen and (max-width: 767px) {
+  .event-register-form_button {
+    width: 100%;
+    height: 100px;
+    margin-top: 12px;
+    padding: 0;
+    color: var(--typography-black);
+    font-family: Nohemi;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 93%;
+    text-transform: uppercase;
+    border: none;
+    transition: 300ms;
+  }
 }
 
 .event-register-form_button {
