--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -12,7 +12,7 @@
 }
 
 .home_cta {
-  max-width: 880px;
+  max-width: 810px;
   display: flex;
   flex-direction: column;
   margin-bottom: 60px;
@@ -26,7 +26,7 @@
   font-size: 36px;
   font-weight: 600;
   line-height: 33.48px;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
 }
 
@@ -36,20 +36,21 @@
   cursor: pointer;
   background-color: inherit;
   margin-top: 64px;
-  padding: 20px 30px;
+  padding: 30px 30px;
   color: var(--typography-white);
   border-color: var(--typography-white);
   border: 2px solid rgb(244, 245, 240);
   text-transform: uppercase;
   font-family: Nohemi;
-  font-size: 32px;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: 600;
   line-height: 93%;
   transition: 300ms;
 }
 
 .home_cta-button:hover {
-  background-color: var(--primary-orange);
+  background-color: rgba(244, 245, 240, 0.7);
+  color: var(--typography-black);
 }
 
 .home_middle-block {
@@ -116,6 +117,9 @@
   .home_middle-block-text1,
   .home_middle-block-text2 {
     max-width: 364px;
+  }
+  .home_middle-block-text1 {
+    padding-top: 100px;
   }
   .home_cta-button {
     margin-top: 30px;
