--- a/src/components/our-team/our-team.css
+++ b/src/components/our-team/our-team.css
@@ -15,7 +15,7 @@
 
 .our-team_header-accent {
   font-family: Dark-Comrade;
-  color: var(--primary-orange);
+  color: var(--primary-red);
 }
 
 .our-team_list {
@@ -25,6 +25,60 @@
   justify-content: space-between;
   transform-style: preserve-3d;
   transform: perspective(1000px);
+}
+
+@media screen and (max-width: 767px) {
+  .our-team_list {
+    margin-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+  }
+
+  .our-team_list-image {
+    object-fit: cover;
+    width: 180px;
+    height: 220px;
+  }
+
+  .our-team_list .our-team_list-item {
+    transition: 0.5s;
+    filter: saturate(0);
+  }
+
+  .our-team_list .our-team_list-item:hover {
+    filter: saturate(1);
+    transform: translateZ(100px);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+  .our-team_list .our-team_list-item {
+    transition: 0.5s;
+    filter: saturate(0);
+  }
+
+  .our-team_list .our-team_list-item:hover {
+    filter: saturate(1);
+    transform: translateZ(200px);
+  }
+
+  .our-team_list .our-team_list-item:hover + * {
+    filter: saturate(0.6);
+    transform: translateZ(150px) rotateY(40deg);
+  }
+
+  .our-team_list .our-team_list-item:has(+ *:hover) {
+    filter: saturate(0.6);
+    transform: translateZ(150px) rotateY(-40deg);
+  }
+  .our-team_list-image {
+    object-fit: cover;
+    width: 210px;
+    height: 320px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -67,34 +121,11 @@
     filter: saturate(0.2);
     transform: translateZ(30px) rotateY(-10deg);
   }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1439px) {
-  .our-team_list .our-team_list-item {
-    transition: 0.5s;
-    filter: saturate(0);
+  .our-team_list-image {
+    object-fit: cover;
+    width: 210px;
+    height: 320px;
   }
-
-  .our-team_list .our-team_list-item:hover {
-    filter: saturate(1);
-    transform: translateZ(200px);
-  }
-
-  .our-team_list .our-team_list-item:hover + * {
-    filter: saturate(0.6);
-    transform: translateZ(150px) rotateY(40deg);
-  }
-
-  .our-team_list .our-team_list-item:has(+ *:hover) {
-    filter: saturate(0.6);
-    transform: translateZ(150px) rotateY(-40deg);
-  }
-}
-
-.our-team_list-image {
-  object-fit: cover;
-  width: 210px;
-  height: 320px;
 }
 
 /*! info info info info info */
@@ -154,8 +185,9 @@
 }
 
 .our-team_info__title-section_button:hover {
+  background-color: var(--primary-orange);
   border-color: var(--primary-orange);
-  fill: var(--primary-orange);
+  fill: var(--typography-white);
 }
 
 .our-team_info__title-section_link-svg {
@@ -214,8 +246,11 @@
     height: auto;
   }
 
+  .four-team_info__title-section_button-wrapper {
+    width: 100%;
+  }
   .our-team_info__title-section_button {
-    width: 214px;
+    width: 100%;
     height: 94px;
   }
 
