--- a/src/components/our-musicians/our-musicians.css
+++ b/src/components/our-musicians/our-musicians.css
@@ -54,7 +54,7 @@
 @media screen and (max-width: 767px) {
   .our-musicians_card-image {
     object-fit: cover;
-    max-width: 448px;
+    max-width: 100%;
     height: 546px;
   }
 }
@@ -141,6 +141,9 @@
   .our-musicians_names {
     display: flex;
     gap: 20px;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
   }
 }
 
