--- a/src/components/hero-block/hero-block.css
+++ b/src/components/hero-block/hero-block.css
@@ -7,7 +7,8 @@
 
 .hero-background {
   background-image: url('../../assets/backgrounds/hero-bg.webp');
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hero_span {
