--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,7 +5,7 @@
   padding: 30px 0 30px 0;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(10px);
-  transition: 300ms;
+  transition: 600ms;
   z-index: 10;
 }
 
@@ -14,14 +14,17 @@
 }
 
 .header__hidden {
-  top: -160px;
+  top: -100%;
 }
 
 .header .container {
   display: flex;
   width: 1440px;
   height: 94px;
-  justify-content: space-between;
+}
+
+.header-exit_btn {
+  display: none;
 }
 
 .header-logo {
@@ -32,11 +35,12 @@
 
 .nav-bar {
   display: flex;
-  flex-grow: 1;
+  margin-left: auto;
   justify-content: flex-end;
 }
 
 .header-nav__list {
+  display: block;
   width: 158.5px;
 }
 
@@ -65,6 +69,7 @@
 }
 
 .header-nav__bracket {
+  display: inline;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -115,16 +120,11 @@
   }
 }
 
-.header-nav__text {
-  backdrop-filter: 1;
-}
-
 .header-social__list {
   display: flex;
   gap: 12px;
   justify-content: end;
   width: 158.5px;
-  height: 24px;
 }
 
 .header-social__icon {
@@ -137,6 +137,10 @@
 .header-social__icon:hover,
 .header-social__icon:focus {
   fill: var(--primary-orange);
+}
+
+.header-social__span {
+  display: none;
 }
 
 .header-btn {
@@ -179,9 +183,135 @@
   opacity: 1;
 }
 
+.header-btn__icon {
+  display: none;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1439px) {
   .header-btn {
     top: 15px;
     right: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    height: 100vh;
+    background-color: black;
+    backdrop-filter: none;
+  }
+
+  .header .container {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    overflow-y: scroll;
+  }
+
+  .header-exit_btn {
+    position: absolute;
+    top: 45.5px;
+    right: 16px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 42px;
+    height: 42px;
+    padding: 0;
+    background-color: inherit;
+    border: none;
+
+    transition: 300ms;
+    z-index: 11;
+  }
+
+  .header-exit_btn__icon {
+    width: 100%;
+    height: 100%;
+    fill: var(--primary-white);
+  }
+
+  .header-exit_btn__icon:hover,
+  .header-exit_btn__icon:focus {
+    fill: var(--primary-orange);
+  }
+
+  .header-logo {
+    fill: var(--primary-orange);
+  }
+
+  .nav-bar {
+    margin: 100px 0 0 0;
+  }
+
+  .header-nav__list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+  }
+
+  .header-nav__link {
+    padding: 0;
+    color: var(--typography-grey);
+    font-size: 48px;
+    line-height: 48.25px;
+  }
+
+  .header-nav__bracket {
+    display: none;
+  }
+
+  .header-social__list {
+    flex-wrap: wrap;
+    justify-content: start;
+    gap: 20px;
+    width: 100%;
+    margin-top: 200px;
+    padding-top: 20px;
+    border-top: 2px solid var(--typography-grey);
+  }
+
+  .header-social__icon {
+    width: 34px;
+    height: 34px;
+    fill: var(--typography-grey);
+  }
+
+  .header-social__span {
+    display: block;
+    width: 100%;
+    margin-top: 30px;
+
+    color: var(--typography-grey);
+    font-family: Nohemi;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 24.12px;
+    text-transform: uppercase;
+  }
+
+  .header-btn {
+    top: 36px;
+    right: 16px;
+
+    width: 61px;
+    height: 61px;
+    padding: 0;
+
+    border: none;
+  }
+
+  .header-btn span {
+    display: none;
+  }
+
+  .header-btn__icon {
+    display: block;
+    width: 100%;
+    height: 100%;
+    fill: var(--primary-white);
   }
 }
