--- a/src/components/work-with-us/work-with-us.css
+++ b/src/components/work-with-us/work-with-us.css
@@ -127,3 +127,10 @@
     margin-top: 20px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .workWithUs-btn {
+    width: 100%;
+    height: 109px;
+  }
+}
