--- a/src/base.css
+++ b/src/base.css
@@ -9,6 +9,9 @@
   --typography-grey: rgb(64, 65, 60);
   --system-default-40: rgb(182, 182, 182);
 }
+html {
+  scroll-behavior: smooth;
+}
 
 @font-face {
   font-family: 'Nohemi';
@@ -42,7 +45,6 @@
 
 body {
   background-color: #000;
-  /* background-image: url('./assets/background.png'); */
   background-size: auto 100%;
   background-position: center center;
   background-repeat: no-repeat;
@@ -149,4 +151,88 @@ button {
 
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(155, 64, 12);
+}
+
+@media screen and (max-width: 767px) {
+  .auto-rotate {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    z-index: -1;
+    width: 200px;
+    height: 200px;
+    animation: autoRotateAnimation;
+    animation-timeline: view();
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .auto-rotate {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    z-index: -1;
+    width: 200px;
+    height: 200px;
+    animation: autoRotateAnimation;
+    animation-timeline: view();
+  }
+}
+
+@keyframes autoRotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.autoShow {
+  animation: autoShowAnimation 1s ease-out forwards;
+}
+
+.autoShowByScroll {
+  animation: autoShowAnimation 1s ease-out forwards;
+  animation-timeline: view(70% 0%);
+}
+
+@keyframes autoShowAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.autoBlur {
+  animation: autoBlurAnimation both;
+  animation-timeline: view();
+}
+
+@keyframes autoBlurAnimation {
+  0% {
+    filter: blur(40px);
+    transform: translateY(200px) scale(0.3);
+  }
+  100% {
+    filter: blur(0);
+    transform: translateY(0), scale(1);
+  }
+}
+
+.content-container {
+  opacity: 0;
+  filter: blur(10px);
+  transition:
+    opacity 1s ease-out,
+    filter 1s ease-out;
+}
+
+.content-container.show {
+  opacity: 1;
+  filter: blur(0);
 }
