--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -100,6 +100,14 @@
   width: 100%;
 }
 
+@media screen and (min-width: 1440px) {
+  .event-register-form {
+    display: flex;
+    flex-direction: column;
+    width: 647px;
+  }
+}
+
 .event-register-form_container {
   display: flex;
   flex-direction: column;
@@ -120,7 +128,7 @@
 .event-register-form_text {
   margin-top: 15px;
   padding-bottom: 28px;
-  color: var(--primary-orange);
+  color: var(--primary-red);
   font-family: Nohemi;
   font-size: 16px;
   font-weight: 600;
@@ -222,8 +230,9 @@
   max-width: 984px;
 }
 
-.event-register-form_button:hover {
-  background-color: var(--primary-orange);
+.event-register-form_button:hover,
+.event-register-form_button:focus {
+  background-color: var(--primary-red);
   color: var(--typography-white);
 }
 
