--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import './components/loader/loader.css';
 @import './components/header/header.css';
 @import './components/home/home.css';
 @import './components/about/about.css';
