--- a/src/components/hero-block/hero-block.css
+++ b/src/components/hero-block/hero-block.css
@@ -24,6 +24,7 @@
 .hero_image {
   width: 100%;
   max-width: 458px;
+  filter: drop-shadow(0px 10px crimson);
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
