--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -2,9 +2,11 @@
   display: flex;
   padding-top: 200px;
   padding-bottom: 200px;
+  position: relative;
 }
 
 .event-block {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   column-gap: 19px;
@@ -118,6 +120,25 @@
     display: flex;
     flex-direction: column;
     width: 647px;
+  }
+  .event-shape1 {
+    mix-blend-mode: hard-light;
+    position: absolute;
+    width: 524px;
+    height: 524px;
+    left: -15%;
+    top: -25%;
+    z-index: -1;
+    pointer-events: none;
+  }
+  .event-shape2 {
+    mix-blend-mode: hard-light;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    right: 0%;
+    bottom: 10%;
+    pointer-events: none;
   }
 }
 
@@ -283,5 +304,36 @@
 
   .event-cards_info-card_text {
     font-size: 18px;
+  }
+  .event-shape1 {
+    mix-blend-mode: hard-light;
+    position: absolute;
+    width: 524px;
+    height: 524px;
+    left: -15%;
+    top: -15%;
+    z-index: -1;
+    pointer-events: none;
+  }
+  .event-shape2 {
+    mix-blend-mode: hard-light;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    right: 0%;
+    bottom: 5%;
+    z-index: -1;
+    pointer-events: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .event-shape1 {
+    mix-blend-mode: hard-light;
+    position: absolute;
+    width: 100%;
+    max-height: 400px;
+    left: -16%;
+    top: -11%;
   }
 }
