--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -138,6 +138,7 @@
     position: absolute;
     right: 0%;
     bottom: 10%;
+    z-index: -1;
     pointer-events: none;
   }
 }
@@ -324,6 +325,7 @@
     bottom: 5%;
     z-index: -1;
     pointer-events: none;
+    opacity: 0.2;
   }
 }
 
@@ -335,5 +337,16 @@
     max-height: 400px;
     left: -16%;
     top: -11%;
+  }
+  .event-shape2 {
+    mix-blend-mode: hard-light;
+    width: 280px;
+    height: 280px;
+    position: absolute;
+    right: 0%;
+    bottom: 5%;
+    z-index: -1;
+    pointer-events: none;
+    opacity: 0.2;
   }
 }
