--- a/src/components/news/news.css
+++ b/src/components/news/news.css
@@ -1,6 +1,8 @@
 .news {
   padding-top: 150px;
-  padding-bottom: 80px;
+  padding-bottom: 160px;
+  position: relative;
+  overflow: hidden;
 }
 
 .news-logo {
@@ -39,7 +41,7 @@
   height: 420px;
   border: 2px solid var(--primary-white);
   padding: 20px 20px;
-
+  background-color: black;
   transition: 300ms;
 }
 
@@ -92,4 +94,26 @@
   font-size: 11px;
   font-weight: 400;
   line-height: 11px;
+}
+
+.news-shape6 {
+  mix-blend-mode: hard-light;
+  position: absolute;
+  width: 524px;
+  height: 524px;
+  right: 18%;
+  top: -8%;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.news-shape7 {
+  mix-blend-mode: hard-light;
+  position: absolute;
+  width: 524px;
+  height: 524px;
+  left: 18%;
+  bottom: -16%;
+  z-index: -1;
+  pointer-events: none;
 }
