--- a/src/components/our-musicians/our-musicians.css
+++ b/src/components/our-musicians/our-musicians.css
@@ -109,14 +109,7 @@
 
 @media screen and (max-width: 767px) {
   .our-musicians-shape3 {
-    mix-blend-mode: hard-light;
-    width: 800px;
-    height: 700px;
-    position: absolute;
-    left: -35%;
-    top: -16%;
-    pointer-events: none;
-    z-index: -1;
+    display: none;
   }
 
   .our-musicians-shape4 {
@@ -305,5 +298,13 @@
   .our-musicians_name {
     font-size: 32px;
     line-height: 32px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .our-musicians_card-image {
+    object-fit: cover;
+    max-width: 100%;
+    height: 346px;
   }
 }
