--- a/src/components/work-with-us/work-with-us.css
+++ b/src/components/work-with-us/work-with-us.css
@@ -100,3 +100,35 @@
     height: 109px;
   }
 }
+@media screen and (max-width: 767px) {
+  .work-with-us-shape5 {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    z-index: -1;
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .work-with-us-shape5 {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    z-index: -1;
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .work-with-us-shape5 {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    z-index: -1;
+    width: 300px;
+    height: 300px;
+  }
+}
