--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -172,6 +172,7 @@
 }
 
 .event-register-form_input {
+  width: 100%;
   height: 24px;
   padding-left: 20px;
   background-color: inherit;
@@ -201,10 +202,10 @@
   content: '';
   position: absolute;
   bottom: 0;
-  left: -350px;
+  left: -100%;
   display: block;
-  min-width: 350px;
-  min-height: 1px;
+  width: 100%;
+  height: 1px;
   border-bottom: 2px solid var(--primary-white);
   transition: 300ms;
 }
