--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -151,17 +151,18 @@
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   margin: 0;
-  padding-top: 10px;
   background-color: inherit;
   border: 2px solid white;
   border-radius: 100%;
 
   color: white;
-  font-size: 18px;
+  font-size: 36px;
+  font-weight: 600;
   text-align: center;
   line-height: 1;
 
@@ -185,8 +186,21 @@
 }
 
 .header-btn__icon,
-.header-btn__mobile_wrapper {
+.header-logo__mobile {
   display: none;
+}
+
+.header-btn__mobile_wrapper {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  display: block;
+  width: 100%;
+  padding-top: 30px;
+
+  z-index: 9;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
@@ -257,15 +271,18 @@
     fill: var(--primary-orange);
   }
 
-  .header-btn__mobile_wrapper {
+  /* .header-btn__mobile_wrapper {
+    position: fixed;
     display: block;
-  }
+    padding-top: 30px;
+  } */
 
   .header-logo__mobile {
-    position: fixed;
-    top: 30px;
-    left: 16px;
+    /* position: fixed; */
+    /* top: 30px; */
+    /* left: 16px; */
 
+    display: block;
     width: 75px;
     height: 73px;
 
