added mac checking to form animation

--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -198,6 +198,10 @@
   overflow: hidden;
 }
 
+body.not-mac-user .event-register-form_input-label {
+  display: none;
+}
+
 .event-register-form_input-label::before {
   content: '';
   position: absolute;
