--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -196,10 +196,11 @@
 .event-register-form_input-label {
   position: relative;
   overflow: hidden;
+  display: none;
 }
 
 body.not-mac-user .event-register-form_input-label {
-  display: none;
+  display: inline-block;
 }
 
 .event-register-form_input-label::before {
